--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,50 @@
 {
   "compilerOptions": {
-    "target": "es2018",
-     "lib": ["es2018", "esnext.asynciterable"],
-     "experimentalDecorators": true,
-     "emitDecoratorMetadata": true,
-     "module": "commonjs",
-     "esModuleInterop": true,
-     "forceConsistentCasingInFileNames": true,
-
+    "target": "es2021",
+    "module": "commonjs",
+    "declaration": false,
+    "sourceMap": false,
+    "outDir": "./build",
+    "moduleResolution": "node",
+    "removeComments": true,
+    "importHelpers": true,
     "strict": true,
-    "skipLibCheck": true
-  }
+    "allowUnreachableCode": false,
+    "allowUnusedLabels": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitOverride": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": false,
+    "resolveJsonModule": true,
+    "plugins": [
+      {
+        "transform": "typescript-transform-paths"
+      },
+      {
+        "transform": "typescript-transform-paths",
+        "afterDeclarations": true
+      },
+      {
+        "transform": "typescript-transformer-esm",
+        "after": true
+      },
+      {
+        "transform": "typescript-transformer-esm",
+        "afterDeclarations": true
+      }
+    ],
+    "paths": {
+      "@/*": ["./src/*"],
+      "type-graphql": ["./src/index.ts"]
+    }
+  },
+  "exclude": ["./node_modules", "./build"],
+  "include": ["./src"]
 }
