--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
   "dependencies": {
     "@apollo/server": "^4.10.2",
     "@prisma/client": "^4.16.1",
+    "bcryptjs": "^2.4.3",
+    "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
     "express": "^4.19.1",
-    "express-jwt": "^8.4.1",
     "graphql-fields": "^2.0.3",
     "graphql-scalars": "^1.22.2",
     "reflect-metadata": "^0.1.13",
@@ -34,6 +35,7 @@
     "vue": "^3.2.47"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cookie-session": "^2.0.48",
     "@types/cors": "^2.8.17",
     "@types/express-jwt": "^7.4.2",
