--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "lint": "eslint src",
+    "lint-fix": "eslint --fix src",
     "preview": "vite preview",
     "server": "ts-node src/server/index.ts",
     "generate": "prisma generate",
@@ -41,8 +43,11 @@
     "@types/express-jwt": "^7.4.2",
     "@types/graphql-fields": "^1.3.5",
     "@types/node": "^20.3.1",
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
+    "@typescript-eslint/parser": "^7.4.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.24.0",
     "prisma": "^4.16.1",
     "ts-node": "^10.9.1",
     "typegraphql-prisma": "^0.26.0",
