--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -5,6 +5,7 @@ env:
 extends:
   - eslint:recommended
   - plugin:@typescript-eslint/recommended
+  - plugin:vue/vue3-recommended
 parserOptions:
   ecmaVersion: latest
   parser: '@typescript-eslint/parser'
