--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "migrate": "prisma migrate dev"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.9",
     "@apollo/server": "^4.10.2",
-    "@prisma/client": "^4.16.1",
+    "@prisma/client": "^5.11.0",
+    "@vue/apollo-composable": "^4.0.2",
     "bcryptjs": "^2.4.3",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
@@ -35,7 +37,10 @@
     "reflect-metadata": "^0.2.2",
     "tslib": "^2.6.0",
     "type-graphql": "^2.0.0-beta.2",
-    "vue": "^3.2.47"
+    "typescript-vue-plugin": "^1.8.27",
+    "vue": "^3.3.0",
+    "vue-demi": "^0.14.7",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -47,16 +52,14 @@
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/eslint-config-typescript": "^13.0.0",
+    "@vue/tsconfig": "^0.5.1",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.24.0",
-    "prisma": "^4.16.1",
+    "prisma": "^5.11.0",
     "ts-node": "^10.9.1",
-<<<<<<< Updated upstream
-    "typegraphql-prisma": "^0.26.0",
-=======
     "tsconfig-paths": "^4.2.0",
     "typegraphql-prisma": "^0.27.2",
->>>>>>> Stashed changes
     "typescript": "^5.1.3",
     "vite": "^4.1.4"
   }
