--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,20 @@
 {
+  "extends": "@vue/tsconfig/tsconfig.json",
   "compilerOptions": {
     "target": "es2021",
-    "module": "commonjs",
+    "module": "nodenext",
+    "verbatimModuleSyntax": false,
     "declaration": false,
     "sourceMap": false,
-    "outDir": "./build",
+    "outDir": "./out",
     "moduleResolution": "node",
     "removeComments": true,
     "importHelpers": true,
     "strict": true,
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noImplicitOverride": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
@@ -45,6 +47,6 @@
       "type-graphql": ["./src/index.ts"]
     }
   },
-  "exclude": ["./node_modules", "./build"],
+  "exclude": ["./node_modules", "./out"],
   "include": ["./src"]
 }
