--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -6,6 +6,12 @@ extends:
   - eslint:recommended
   - plugin:@typescript-eslint/recommended
   - plugin:vue/vue3-recommended
+  - plugin:import/recommended
+  - plugin:import/typescript
+settings:
+  import/resolver:
+    typescript: true
+    node: true
 parserOptions:
   ecmaVersion: latest
   parser: '@typescript-eslint/parser'
@@ -27,6 +33,23 @@ rules:
     - never
   sort-imports:
     - error
+    - ignoreDeclarationSort: true
+  import/order:
+    - error
+    - alphabetize:
+        order: asc
+        caseInsensitive: false
+      groups:
+        - builtin
+        - external
+        - internal
+        - unknown
+        - parent
+        - sibling
+        - index
+        - object
+        - type
+      newlines-between: always
   object-curly-spacing:
     - error
     - always
