--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src",
-    "lint-fix": "eslint --fix src",
+    "lint-fix": "eslint --fix --ext .ts,.vue src",
     "preview": "vite preview",
     "server": "ts-node src/server/index.ts",
     "generate": "prisma generate",
@@ -54,6 +54,7 @@
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/tsconfig": "^0.5.1",
     "eslint": "^8.57.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-vue": "^9.24.0",
     "prisma": "^5.11.0",
     "ts-node": "^10.9.1",
