--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -18,6 +18,7 @@ parserOptions:
   sourceType: module
 plugins:
   - '@typescript-eslint'
+  - '@stylistic/ts'
 rules:
   indent:
     - error
@@ -53,3 +54,6 @@ rules:
   object-curly-spacing:
     - error
     - always
+  '@stylistic/ts/comma-dangle':
+     - error
+     - always-multiline
