--- a/package.json
+++ b/package.json
@@ -17,40 +17,24 @@
     "lint": "eslint src",
     "lint-fix": "eslint --fix --ext .ts,.vue src",
     "preview": "vite preview",
-    "server": "ts-node src/server/index.ts",
-    "generate": "prisma generate",
-    "migrate": "prisma migrate dev"
+    "server": "ts-node src/server/index.ts"
   },
   "workspaces": [
     "src/server",
     "src/web"
   ],
   "dependencies": {
-    "@apollo/server": "^4.10.2",
     "@prisma/client": "^5.11.0",
     "@stylistic/eslint-plugin": "^1.7.0",
     "@vue/apollo-composable": "^4.0.2",
-    "bcryptjs": "^2.4.3",
-    "cookie-session": "^2.1.0",
-    "cors": "^2.8.5",
-    "express": "^4.19.1",
-    "graphql-fields": "^2.0.3",
-    "graphql-scalars": "^1.22.2",
     "react": "^18.2.0",
     "reflect-metadata": "^0.2.2",
     "tslib": "^2.6.0",
-    "type-graphql": "^2.0.0-beta.2",
-    "typescript-vue-plugin": "^1.8.27",
     "vue": "^3.3.0",
     "vue-demi": "^0.14.7",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cookie-session": "^2.0.48",
-    "@types/cors": "^2.8.17",
-    "@types/express-jwt": "^7.4.2",
-    "@types/graphql-fields": "^1.3.5",
     "@types/node": "^20.3.1",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
@@ -60,10 +44,8 @@
     "eslint": "^8.57.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-vue": "^9.24.0",
-    "prisma": "^5.11.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typegraphql-prisma": "^0.27.2",
     "typescript": "^5.1.3",
     "vite": "^4.1.4"
   }
