--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,57 +1,11 @@
 {
-  "extends": "@vue/tsconfig/tsconfig.json",
-  "ts-node": {
-    "require": ["tsconfig-paths/register"]
-  },
-  "compilerOptions": {
-    "target": "es2021",
-    "module": "commonjs",
-    "verbatimModuleSyntax": false,
-    "declaration": false,
-    "sourceMap": false,
-    "outDir": "./out",
-    "moduleResolution": "node",
-    "removeComments": true,
-    "importHelpers": true,
-    "strict": true,
-    "allowUnreachableCode": false,
-    "allowUnusedLabels": false,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noImplicitOverride": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "resolveJsonModule": true,
-    "plugins": [
-      {
-        "transform": "typescript-transform-paths"
-      },
-      {
-        "transform": "typescript-transform-paths",
-        "afterDeclarations": true
-      },
-      {
-        "transform": "typescript-transformer-esm",
-        "after": true
-      },
-      {
-        "transform": "typescript-transformer-esm",
-        "afterDeclarations": true
-      }
-    ],
-    "paths": {
-      "@/*": ["./src/*"],
-      "type-graphql": ["./src/index.ts"],
-      "@out/*": ["./out/*"],
-      "@typegraphql-prisma": ["./out/type-graphql"]
+  "files": [],
+  "references": [
+    {
+      "path": "src/server",
+    },
+    {
+      "path": "src/web",
     }
-  },
-  "exclude": ["./node_modules", "./out"],
-  "include": ["./src"]
+  ]
 }
