--- a/package.json
+++ b/package.json
@@ -12,41 +12,28 @@
     "emitDecoratorMetadata": true
   },
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
     "lint": "eslint src",
-    "lint-fix": "eslint --fix --ext .ts,.vue src",
-    "preview": "vite preview",
-    "server": "ts-node src/server/index.ts"
+    "lint-fix": "eslint --fix --ext .ts,.vue src"
   },
   "workspaces": [
     "src/server",
     "src/web"
   ],
   "dependencies": {
-    "@prisma/client": "^5.11.0",
     "@stylistic/eslint-plugin": "^1.7.0",
-    "@vue/apollo-composable": "^4.0.2",
-    "react": "^18.2.0",
     "reflect-metadata": "^0.2.2",
-    "tslib": "^2.6.0",
-    "vue": "^3.3.0",
-    "vue-demi": "^0.14.7",
-    "vue-router": "^4.3.0"
+    "tslib": "^2.6.0"
   },
   "devDependencies": {
     "@types/node": "^20.3.1",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
-    "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
-    "@vue/tsconfig": "^0.5.1",
     "eslint": "^8.57.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-vue": "^9.24.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3",
-    "vite": "^4.1.4"
+    "typescript": "^5.1.3"
   }
 }
