--- a/src/web/package.json
+++ b/src/web/package.json
@@ -13,7 +13,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/tsconfig": "^0.5.1",
+    "eslint-plugin-vue": "^9.24.0",
     "vite": "^5.2.7"
   },
   "scripts": {
