--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -2,10 +2,11 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "module": "commonjs",
+    "allowJs": true,
     "paths": {
       "@/*": ["./*"],
       "type-graphql": ["./src/index.ts"],
       "@typegraphql-prisma": ["../../out/type-graphql"]
     }
-  }
+  },
 }
