--- a/src/web/package.json
+++ b/src/web/package.json
@@ -9,14 +9,18 @@
     "react": "^18.2.0",
     "vue": "^3.3.0",
     "vue-demi": "^0.14.7",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vuetify": "^3.5.13"
   },
   "devDependencies": {
+    "@mdi/font": "^7.4.47",
+    "@mdi/js": "^7.4.47",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/tsconfig": "^0.5.1",
     "eslint-plugin-vue": "^9.24.0",
-    "vite": "^5.2.7"
+    "vite": "^5.2.7",
+    "vite-plugin-vuetify": "^2.0.3"
   },
   "scripts": {
     "build": "vite build",
