Add functionality to generate types for use by the client

--- a/src/server/package.json
+++ b/src/server/package.json
@@ -27,7 +27,8 @@
   },
   "scripts": {
     "start": "ts-node index.ts",
-    "generate": "prisma generate",
+    "generate-prisma": "prisma generate",
+    "generate-schema": "ts-node index.ts -- --generate_only",
     "migrate": "prisma migrate dev",
     "lint": "eslint --ext .ts *.ts **/*.ts",
     "lint-fix": "eslint --fix --ext .ts *.ts **/*.ts"
