--- a/src/web/tsconfig.json
+++ b/src/web/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "nodenext",
     "paths": {
       "@/*": ["./*"],
+      "@client-types": ["../../out/client_types.ts"],
     }
   }
 }
