Add functionality to get the moon phase. This is necessary before we can make the ritual creation resolver.

--- a/src/server/.env
+++ b/src/server/.env
@@ -1,2 +1,4 @@
 DATABASE_URL="postgresql://tradical@localhost:5432/egrim"
+VISUAL_CROSSING_DOMAIN="https://weather.visualcrossing.com/VisualCrossingWebServices/rest/services/timeline"
+VISUAL_CROSSING_API_KEY="7JBYJNVR27URYW6KKRV4H67XT"
 AUTH_SECRET="shhhh"
