--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   ],
   "dependencies": {
     "@stylistic/eslint-plugin": "^1.7.0",
+    "dotenv": "^16.4.5",
     "reflect-metadata": "^0.2.2",
     "tslib": "^2.6.0"
   },
