--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "allowJs": true,
+    "strictPropertyInitialization": false,
     "paths": {
       "@/*": ["./*"],
       "type-graphql": ["./src/index.ts"],
