A few administrative changes
When I tried to use VSCode it told me that, if module is set to NodeNext, moduleResolution must also be set to that.

--- a/src/server/package.json
+++ b/src/server/package.json
@@ -32,7 +32,8 @@
     "generate-schema": "ts-node index.ts -- --generate_only",
     "migrate": "prisma migrate dev",
     "lint": "eslint --ext .ts *.ts **/*.ts",
-    "lint-fix": "eslint --fix --ext .ts *.ts **/*.ts"
+    "lint-fix": "eslint --fix --ext .ts *.ts **/*.ts",
+    "studio": "prisma studio"
   },
   "author": "tradical"
 }
