--- a/src/web/tsconfig.json
+++ b/src/web/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "module": "nodenext",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "paths": {
       "@/*": ["./*"],
       "@client-types": ["../../out/client_types.ts"],
