Introduce authorization for CRUD
Confirmed that this works using apollo studio, not the web UI

--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -7,7 +7,8 @@
     "paths": {
       "@/*": ["./*"],
       "type-graphql": ["./src/index.ts"],
-      "@typegraphql-prisma": ["../../out/type-graphql"]
+      "@typegraphql-prisma": ["../../out/type-graphql"],
+      "@out/*": ["../../out/*"],
     }
   },
 }
