Seed Tarot Data
In addition to fixing a few little mistakes from the last PR, this change creates logic to seed the database with Tarot suits, ranks, and cards.

--- a/src/server/package.json
+++ b/src/server/package.json
@@ -4,6 +4,9 @@
   "description": "Backend for the electronic grimoire",
   "module": "commonjs",
   "type": "commonjs",
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
     "@apollo/server": "^4.10.2",
     "axios": "^1.6.8",
@@ -33,6 +36,7 @@
     "migrate": "prisma migrate dev",
     "lint": "eslint --ext .ts *.ts **/*.ts",
     "lint-fix": "eslint --fix --ext .ts *.ts **/*.ts",
+    "seed": "prisma db seed",
     "studio": "prisma studio"
   },
   "author": "tradical"
